--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,md}\"",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet"
   },
   "dependencies": {
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1"
   }
 }
