--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,md}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.0.0"
   }
 }
