--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,20 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:import/errors",
+    "plugin:jsx-a11y/recommended",
     "prettier"
   ],
-  "plugins": [],
+  "plugins": [
+    "react",
+    "import",
+    "jsx-a11y"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/react-in-jsx-scope": 0
+  },
   "parserOptions": {
     "ecmaVersion": 2022,
     "sourceType": "module",
@@ -15,5 +26,15 @@
     "browser": true,
     "node": true,
     "es2021": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx"]
+      }
+    }
   }
 }
