--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8"
   }
 }
