fetch data from apis

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   ],
   "rules": {
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "react-hooks/exhaustive-deps": 0
   },
   "parserOptions": {
     "ecmaVersion": 2022,
